@@ -1,3 +1,7 @@
+Menu Position 7.x-1.x-dev, xxxx-xx-xx (development release)
+-------------------------------------
+- #1773890: Editing a rule with a deleted parent menu link causes fatal error
+
 Menu Position 7.x-1.1, 2012-02-22
 ---------------------------------
 - #1439948 by reglogge: form validation fails when adding many taxonomy terms to a rule
